# netkatana

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  CHECKS.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  TODO.md  checks.toml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  publish-image.yml
src/netkatana/: __init__.py  checkers.py  cli.py  exceptions.py  formatters.py  http.py  models.py  rules.py  scanners.py  tls.py  types.py  utils.py
src/netkatana/checks/: __init__.py  config.py  dns.py  tls.py
src/netkatana/checks/http/: headers.py
src/netkatana/validators/: dns.py  tls.py
src/netkatana/validators/http/: headers.py  response.py
src/netkatana/validators/http/headers/: csp.py  general.py
tests/: test_checkers.py  test_http.py  test_rules.py  test_scanners.py  test_tls.py  test_utils.py
tests/checks/dns/: test_dns.py
tests/checks/http/: test_headers.py
tests/validators/: test_dns.py  test_tls.py
tests/validators/http/: test_headers.py  test_response.py
tests/validators/http/headers/: test_csp.py  test_general.py
