[project]
name = "netkatana"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Vlad Dmitrievich", email = "2tunnels@proton.me" }
]
requires-python = ">=3.14.3"
dependencies = [
    "click>=8.3.2",
    "httpx>=0.28.1",
    "rich>=14.3.3",
]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]

[project.scripts]
netkatana = "netkatana.cli:cli"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
