[project]
name = "netkatana"
version = "0.1.6"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Vlad Dmitrievich", email = "2tunnels@proton.me" }
]
requires-python = ">=3.14.3"
dependencies = [
    "click>=8.3.2",
    "dnspython>=2.8.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "rich>=14.3.3",
]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "respx>=0.22.0",
    "ruff>=0.15.9",
    "vulture>=2.16",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]

[project.scripts]
netkatana = "netkatana.cli:cli"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
